tests/good/currying.vshs
// Currying.

f a b :: Int -> Int -> Int = a + b

addMeaning x :: Int -> Int = f 42
