tests/bad/typingError.vshs
// Static typing error.

a :: Int = true;